--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fappadvice.com%2Fapp%2Fumeme-mobile%2F1091640268&psig=AOvVaw016nn1Sh8VGCcrRCVK6KA9&ust=1648321174839000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCLCm44L54fYCFQAAAAAdAAAAABAD" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
